--- a/ggplot2/statSig_visualRepresentation.Rmd
+++ b/ggplot2/statSig_visualRepresentation.Rmd
@@ -1,6 +1,6 @@
 This code allows you to represent regression output (i.e. coefficients and p-values) in a grid-like format, in which coefficient values appear as horizontal bar plots, which are color-coded based on whether or not they are (1) not statistically significant; (2) sig and >0; (3) sig and <0
 
-The data I worked with can't be posted, but relates to hospitals in a study (i.e. treatment/control hospitals), and DiD estimates for the effect of treatment on various healthcare outcome variables.
+The data I worked with can't be posted, but relates to hospitals in a study (i.e. treatment/control hospitals), and DiD estimates for the effect of treatment on various healthcare outcome variables. Dummy data is used for the plot below.
 
 ![The output will look like this:](ra_SiteLevelMetricsPlot.png)
 
